// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiPaymentDetail should not render if not open 1`] = `<DocumentFragment />`;

exports[`MultiPaymentDetail should render a modal 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxiKw cTRlJa absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto overflow-hidden rounded-xl bg-theme-background shadow-2xl "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 hover:bg-theme-primary-300 dark:bg-theme-neutral-800 dark:text-theme-neutral-600 hover:dark:bg-theme-primary-700 hover:dark:text-theme-neutral-400"
      >
        <button
          class="sc-AxjAm cGlMcw w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxirZ fFqjhX"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Transfer
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="sc-AxgMl cbajut"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral-700"
              >
                Sender
              </div>
              <div
                class="font-semibold"
              >
                <div
                  class="inline-flex items-center"
                >
                  <span
                    class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                    data-testid="address__wallet-name"
                  >
                    Test Wallet
                  </span>
                  <span
                    class="sc-Axmtr hBVTto text-theme-neutral-500 dark:text-theme-neutral-700 truncate font-semibold text-base"
                    data-testid="address__wallet-address"
                  >
                    D8rr7B … s6YUYD
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex items-center -space-x-2"
            >
              <div
                class="sc-AxhCb gaiYPD border-theme-text text-theme-text dark:border-theme-neutral-600 dark:text-theme-neutral-600"
              >
                <div
                  class="sc-AxirZ dCVESD"
                  height="25"
                  width="25"
                >
                  <svg>
                    delegate.svg
                  </svg>
                </div>
              </div>
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-AxgMl gKdTrD"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral-700"
              >
                Total Amount
              </div>
              <div
                class="font-semibold"
              >
                <div
                  class="sc-AxhUy jeEWZG"
                  color="danger"
                >
                  <span
                    data-testid="Amount"
                  >
                    - 100 ARK
                  </span>
                </div>
                <span
                  class="ml-2 text-theme-neutral-light"
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="sc-AxhCb gaiYPD border-theme-danger-contrast text-theme-danger dark:border-theme-danger-400 dark:text-theme-danger-400"
            >
              <div
                class="sc-AxirZ iQaTP"
                height="1em"
                width="1em"
              >
                <svg>
                  sent.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            class="sc-AxgMl gKdTrD"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral-700"
              >
                Transaction Fee
              </div>
              <div
                class="font-semibold"
              >
                <span
                  data-testid="Amount"
                >
                  21 ARK
                </span>
              </div>
            </div>
          </div>
          <div
            class="sc-AxgMl gKdTrD"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral-700"
              >
                Smartbridge
              </div>
              <div
                class="font-semibold"
              >
                <p
                  class="break-all"
                >
                  Test
                </p>
              </div>
            </div>
            <div
              class="flex justify-center w-11"
            >
              <div
                class="sc-AxirZ nLAEm"
                height="22"
                width="18"
              >
                <svg>
                  smartbridge.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            class="sc-AxgMl gKdTrD"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral-700"
              >
                Timestamp
              </div>
              <div
                class="font-semibold"
              >
                31.07.2020 16:34:41
              </div>
            </div>
          </div>
          <div
            class="sc-AxgMl gKdTrD"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral-700"
              >
                Confirmations
              </div>
              <div
                class="font-semibold"
              >
                <div
                  class="flex space-x-3"
                >
                  <span>
                    Not confirmed
                  </span>
                  <div
                    class="sc-AxirZ hmuEJr text-theme-warning"
                    height="22"
                    width="22"
                  >
                    <svg>
                      status-pending.svg
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-AxgMl gKdTrD"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral-700"
              >
                ID
              </div>
              <div
                class="font-semibold"
              >
                <div
                  class="flex items-center space-x-3"
                >
                  <a
                    class="sc-AxheI hiprHW inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer text-theme-primary hover:text-theme-primary-dark hover:underline active:text-theme-primary-500"
                    data-testid="Link"
                    rel="noopener noreferrer"
                    to="https://explorer.ark.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                  >
                    <span
                      class="sc-Axmtr hBVTto text-theme-primary-dark"
                      data-testid="TruncateMiddle"
                    >
                      ee4175091d9f4 … 9d09bcf3ecefe
                    </span>
                  </a>
                  <span
                    class="flex text-theme-primary-300 dark:text-theme-neutral-600"
                  >
                    <div
                      class="inline-block cursor-pointer"
                      data-testid="clipboard__wrapper"
                    >
                      <div
                        class="sc-AxirZ iQaTP"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          copy.svg
                        </svg>
                      </div>
                    </div>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-AxgMl gKdTrD"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral-700"
              >
                Block ID
              </div>
              <div
                class="font-semibold"
              >
                <div
                  class="flex items-center space-x-3"
                >
                  <a
                    class="sc-AxheI hiprHW inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer text-theme-primary hover:text-theme-primary-dark hover:underline active:text-theme-primary-500"
                    data-testid="Link"
                    rel="noopener noreferrer"
                    to="https://explorer.ark.io/blocks/71fd1a494ded5430586f4dd1c79c3ac77bf38120e868c8f8980972b8075d67e9"
                  >
                    <span
                      class="sc-Axmtr hBVTto text-theme-primary-dark"
                      data-testid="TruncateMiddle"
                    >
                      adsad12312xsd1w312e1s13203e12
                    </span>
                  </a>
                  <span
                    class="flex text-theme-primary-300 dark:text-theme-neutral-600"
                  >
                    <div
                      class="inline-block cursor-pointer"
                      data-testid="clipboard__wrapper"
                    >
                      <div
                        class="sc-AxirZ iQaTP"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          copy.svg
                        </svg>
                      </div>
                    </div>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiPaymentDetail should render with recipients 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxiKw cTRlJa absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto overflow-hidden rounded-xl bg-theme-background shadow-2xl "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 hover:bg-theme-primary-300 dark:bg-theme-neutral-800 dark:text-theme-neutral-600 hover:dark:bg-theme-primary-700 hover:dark:text-theme-neutral-400"
      >
        <button
          class="sc-AxjAm cGlMcw w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxirZ fFqjhX"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Transfer
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="sc-AxgMl cbajut"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral-700"
              >
                Sender
              </div>
              <div
                class="font-semibold"
              >
                <div
                  class="inline-flex items-center"
                >
                  <span
                    class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                    data-testid="address__wallet-name"
                  >
                    Test Wallet
                  </span>
                  <span
                    class="sc-Axmtr hBVTto text-theme-neutral-500 dark:text-theme-neutral-700 truncate font-semibold text-base"
                    data-testid="address__wallet-address"
                  >
                    D8rr7B … s6YUYD
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex items-center -space-x-2"
            >
              <div
                class="sc-AxhCb gaiYPD border-theme-text text-theme-text dark:border-theme-neutral-600 dark:text-theme-neutral-600"
              >
                <div
                  class="sc-AxirZ dCVESD"
                  height="25"
                  width="25"
                >
                  <svg>
                    delegate.svg
                  </svg>
                </div>
              </div>
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-AxgMl gKdTrD"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral-700"
              >
                Recipients (3)
              </div>
              <div
                class="font-semibold"
              >
                <div
                  class="-my-2"
                >
                  <div
                    class="sc-fzpans dIvhjN"
                  >
                    <div
                      class="sc-AxmLO iwBmdw -mt-3"
                      role="table"
                    >
                      <table
                        cellpadding="0"
                        class="table-auto"
                      >
                        <thead>
                          <tr
                            class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
                            role="row"
                          >
                            <th
                              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                              colspan="1"
                              data-testid="table__th--0"
                              role="columnheader"
                            >
                              <div
                                class="flex flex-inline align-top hidden"
                              >
                                <div>
                                  Avatar
                                </div>
                              </div>
                            </th>
                            <th
                              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                              colspan="1"
                              data-testid="table__th--1"
                              role="columnheader"
                            >
                              <div
                                class="flex flex-inline align-top hidden"
                              >
                                <div>
                                  Address
                                </div>
                              </div>
                            </th>
                            <th
                              class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                              colspan="1"
                              data-testid="table__th--2"
                              role="columnheader"
                            >
                              <div
                                class="flex flex-inline align-top hidden"
                              >
                                <div>
                                  Amount
                                </div>
                              </div>
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          role="rowgroup"
                        >
                          <tr
                            class="border-b border-dashed last:border-b-0 border-theme-neutral-300 dark:border-theme-neutral-800"
                            data-testid="recipient-list__recipient-list-item"
                          >
                            <td
                              class="w-12 py-4"
                            >
                              <div
                                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jNpDPZ"
                                data-testid="Avatar"
                              >
                                <div
                                  class="w-full h-full"
                                >
                                  <img
                                    alt="adsad12312xsd1w312e1s13203e12"
                                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(205, 220, 57)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(233, 30, 99)\\"/><circle r=\\"60\\" cx=\\"70\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"40\\" fill=\\"rgb(103, 58, 183)\\"/></svg>"
                                    title="adsad12312xsd1w312e1s13203e12"
                                  />
                                </div>
                              </div>
                            </td>
                            <td
                              class="py-4"
                            >
                              <div
                                class="max-w-lg"
                              >
                                <div
                                  class="inline-flex items-center"
                                >
                                  <span
                                    class="sc-Axmtr hBVTto text-theme-text truncate font-semibold text-base"
                                    data-testid="address__wallet-address"
                                  >
                                    adsad1 … 203e12
                                  </span>
                                </div>
                              </div>
                            </td>
                            <td
                              class="py-4 text-right"
                            >
                              <div
                                class="sc-AxhUy jeEWZG"
                                color="danger"
                              >
                                <span
                                  data-testid="Amount"
                                >
                                  + 0.000002 ARK
                                </span>
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="border-b border-dashed last:border-b-0 border-theme-neutral-300 dark:border-theme-neutral-800"
                            data-testid="recipient-list__recipient-list-item"
                          >
                            <td
                              class="w-12 py-4"
                            >
                              <div
                                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jNpDPZ"
                                data-testid="Avatar"
                              >
                                <div
                                  class="w-full h-full"
                                >
                                  <img
                                    alt="adsad12312xsd1w312e1s13203e13"
                                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"35\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"50\\" cx=\\"100\\" cy=\\"70\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"40\\" cy=\\"60\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                                    title="adsad12312xsd1w312e1s13203e13"
                                  />
                                </div>
                              </div>
                            </td>
                            <td
                              class="py-4"
                            >
                              <div
                                class="max-w-lg"
                              >
                                <div
                                  class="inline-flex items-center"
                                >
                                  <span
                                    class="sc-Axmtr hBVTto text-theme-text truncate font-semibold text-base"
                                    data-testid="address__wallet-address"
                                  >
                                    adsad1 … 203e13
                                  </span>
                                </div>
                              </div>
                            </td>
                            <td
                              class="py-4 text-right"
                            >
                              <div
                                class="sc-AxhUy jeEWZG"
                                color="danger"
                              >
                                <span
                                  data-testid="Amount"
                                >
                                  + 0.0000199 ARK
                                </span>
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="border-b border-dashed last:border-b-0 border-theme-neutral-300 dark:border-theme-neutral-800"
                            data-testid="recipient-list__recipient-list-item"
                          >
                            <td
                              class="w-12 py-4"
                            >
                              <div
                                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jNpDPZ"
                                data-testid="Avatar"
                              >
                                <div
                                  class="w-full h-full"
                                >
                                  <img
                                    alt="adsad12312xsd1w312e1s13203e14"
                                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(33, 150, 243)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"10\\" cy=\\"70\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"60\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"60\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                                    title="adsad12312xsd1w312e1s13203e14"
                                  />
                                </div>
                              </div>
                            </td>
                            <td
                              class="py-4"
                            >
                              <div
                                class="max-w-lg"
                              >
                                <div
                                  class="inline-flex items-center"
                                >
                                  <span
                                    class="sc-Axmtr hBVTto text-theme-text truncate font-semibold text-base"
                                    data-testid="address__wallet-address"
                                  >
                                    adsad1 … 203e14
                                  </span>
                                </div>
                              </div>
                            </td>
                            <td
                              class="py-4 text-right"
                            >
                              <div
                                class="sc-AxhUy jeEWZG"
                                color="danger"
                              >
                                <span
                                  data-testid="Amount"
                                >
                                  + 0.0000199 ARK
                                </span>
                              </div>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-AxgMl gKdTrD"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral-700"
              >
                Total Amount
              </div>
              <div
                class="font-semibold"
              >
                <div
                  class="sc-AxhUy jeEWZG"
                  color="danger"
                >
                  <span
                    data-testid="Amount"
                  >
                    - 100 ARK
                  </span>
                </div>
                <span
                  class="ml-2 text-theme-neutral-light"
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="sc-AxhCb gaiYPD border-theme-danger-contrast text-theme-danger dark:border-theme-danger-400 dark:text-theme-danger-400"
            >
              <div
                class="sc-AxirZ iQaTP"
                height="1em"
                width="1em"
              >
                <svg>
                  sent.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            class="sc-AxgMl gKdTrD"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral-700"
              >
                Transaction Fee
              </div>
              <div
                class="font-semibold"
              >
                <span
                  data-testid="Amount"
                >
                  21 ARK
                </span>
              </div>
            </div>
          </div>
          <div
            class="sc-AxgMl gKdTrD"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral-700"
              >
                Smartbridge
              </div>
              <div
                class="font-semibold"
              >
                <p
                  class="break-all"
                >
                  Test
                </p>
              </div>
            </div>
            <div
              class="flex justify-center w-11"
            >
              <div
                class="sc-AxirZ nLAEm"
                height="22"
                width="18"
              >
                <svg>
                  smartbridge.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            class="sc-AxgMl gKdTrD"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral-700"
              >
                Timestamp
              </div>
              <div
                class="font-semibold"
              >
                31.07.2020 16:34:41
              </div>
            </div>
          </div>
          <div
            class="sc-AxgMl gKdTrD"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral-700"
              >
                Confirmations
              </div>
              <div
                class="font-semibold"
              >
                <div
                  class="flex space-x-3"
                >
                  <span>
                    Well confirmed
                  </span>
                  <span>
                    <div
                      class="sc-AxirZ hmuEJr text-theme-success"
                      height="22"
                      width="22"
                    >
                      <svg>
                        status-ok.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-AxgMl gKdTrD"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral-700"
              >
                ID
              </div>
              <div
                class="font-semibold"
              >
                <div
                  class="flex items-center space-x-3"
                >
                  <a
                    class="sc-AxheI hiprHW inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer text-theme-primary hover:text-theme-primary-dark hover:underline active:text-theme-primary-500"
                    data-testid="Link"
                    rel="noopener noreferrer"
                    to="https://explorer.ark.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                  >
                    <span
                      class="sc-Axmtr hBVTto text-theme-primary-dark"
                      data-testid="TruncateMiddle"
                    >
                      ee4175091d9f4 … 9d09bcf3ecefe
                    </span>
                  </a>
                  <span
                    class="flex text-theme-primary-300 dark:text-theme-neutral-600"
                  >
                    <div
                      class="inline-block cursor-pointer"
                      data-testid="clipboard__wrapper"
                    >
                      <div
                        class="sc-AxirZ iQaTP"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          copy.svg
                        </svg>
                      </div>
                    </div>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-AxgMl gKdTrD"
            data-testid="TransactionDetail"
          >
            <div
              class="flex-1 space-y-2"
            >
              <div
                class="text-sm font-semibold text-theme-neutral-700"
              >
                Block ID
              </div>
              <div
                class="font-semibold"
              >
                <div
                  class="flex items-center space-x-3"
                >
                  <a
                    class="sc-AxheI hiprHW inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer text-theme-primary hover:text-theme-primary-dark hover:underline active:text-theme-primary-500"
                    data-testid="Link"
                    rel="noopener noreferrer"
                    to="https://explorer.ark.io/blocks/71fd1a494ded5430586f4dd1c79c3ac77bf38120e868c8f8980972b8075d67e9"
                  >
                    <span
                      class="sc-Axmtr hBVTto text-theme-primary-dark"
                      data-testid="TruncateMiddle"
                    >
                      adsad12312xsd1w312e1s13203e12
                    </span>
                  </a>
                  <span
                    class="flex text-theme-primary-300 dark:text-theme-neutral-600"
                  >
                    <div
                      class="inline-block cursor-pointer"
                      data-testid="clipboard__wrapper"
                    >
                      <div
                        class="sc-AxirZ iQaTP"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          copy.svg
                        </svg>
                      </div>
                    </div>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
